--- a/src/app/pages/cards/cards.component.html
+++ b/src/app/pages/cards/cards.component.html
@@ -4,10 +4,9 @@
     <div class="card highlight-card card-small">
   
       <img width="48" src="../../../assets/images/ace-hand-tr.svg" alt="">
-      <h1>HISTOIRE DE LA CARDISTRY</h1>
-  
+      <h1>LES CARTES</h1>
     </div>
     <div>
-        <img width="400" src="../../../assets/images/black-diamond.svg" alt="">
+      <img width="400" src="../../../assets/images/black-club.svg" alt="">
     </div>
   </div>
