--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,8 +5,10 @@
   
       <img width="48" src="../../../assets/images/ace-hand-tr.svg" alt="">
   
-      <span>{{ title }} app is running!</span>
+      <h1>ACCUEIL</h1>
   
     </div>
-    
+    <div>
+      <img width="400" src="../../../assets/images/black-spade.svg" alt="">
+    </div>
   </div>
