--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -4,7 +4,9 @@ footer {
     align-items: center;
     line-height: 20px;
   }
-
+footer span {
+  color: white;
+}
   footer a {
     display: flex;
     align-items: center;
