--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header>
     <app-header></app-header>
-</header>
+</header><app-card-background></app-card-background>
 <main>
     <router-outlet></router-outlet>
 </main>
