--- a/src/app/pages/decks/decks.component.html
+++ b/src/app/pages/decks/decks.component.html
@@ -1,12 +1,7 @@
 <div class="content" role="main">
 
-    <!-- Highlight Card -->
-    <div class="card highlight-card card-small">
-  
-      <img width="48" src="../../../assets/images/ace-hand-tr.svg" alt="">
-      <h1>LES CARTES</h1>
-    </div>
+    <app-card-title titre={{titreDeck}}></app-card-title>
     <div>
       <img width="400" src="../../../assets/images/black-club.svg" alt="">
     </div>
-  </div>
+</div>
