--- a/src/app/pages/history/history.component.html
+++ b/src/app/pages/history/history.component.html
@@ -1,11 +1,5 @@
 <div class="content" role="main">
-    <!-- Highlight Card -->
-    <div class="card highlight-card card-small">
-  
-      <img width="48" src="../../../assets/images/ace-hand-tr.svg" alt="">
-      <h1>HISTOIRE DE LA CARDISTRY</h1>
-  
-    </div>
+    <app-card-title titre={{titreHistoire}}></app-card-title>
     <div>
         <span class="texte">
           La Cardistry est une forme d'art de la manipulation des cartes à jouer. Son histoire remonte aux premiers jours des cartes à jouer elles-mêmes. Alors que les cartes à jouer sont utilisées depuis des siècles pour les jeux et la divination, la Cardistry se concentre sur les mouvements et les manipulations esthétiques des cartes, plutôt que sur leur utilisation traditionnelle.
