--- a/src/app/pages/tuto/tuto.component.html
+++ b/src/app/pages/tuto/tuto.component.html
@@ -1,11 +1,6 @@
 <div class="content" role="main">
 
-    <!-- Highlight Card -->
-    <div class="card highlight-card card-small">
-  
-      <img width="48" src="../../../assets/images/ace-hand-tr.svg" alt="">
-      <h1>APPRENDRE LA CARDISTRY</h1>
-    </div>
+    <app-card-title titre={{titreTuto}}></app-card-title>
     <div>
       <img width="400" src="../../../assets/images/black-heart.svg" alt="">
     </div>
