--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,13 +1,6 @@
 <div class="content" role="main">
 
-    <!-- Highlight Card -->
-    <div class="card highlight-card card-small">
-  
-      <img width="48" src="../../../assets/images/ace-hand-tr.svg" alt="">
-  
-      <h1>ACCUEIL</h1>
-  
-    </div>
+    <app-card-title titre={{titre}}></app-card-title>
     <div>
       <img width="400" src="../../../assets/images/black-spade.svg" alt="">
     </div>
